2004-04-21  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/space.h (L4_FPAGE_SPAN_MAX): Increase value.

2004-04-19  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (l4_msg_tag_set_label,
	(l4_msg_tag_set_untyped_words, l4_msg_tag_set_typed_words): New
	functions.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* l4/thread.h (_L4_THREAD_VERSION_BITS, _L4_THREAD_NO_BITS,
	_L4_anylocalthread): Fix macro.

	* l4/pagefault.h, l4/gnu/pagefault.h: New files.
	* Makefile.am (gnu_headers): Add pagefault.h.
	(l4_headers): Likewise.
	* headers.m4: Add l4/pagefault.h and l4/gnu/pagefault.h.

	* l4/thread-start.h, l4/gnu/thread-start.h: New files.
	* Makefile.am (gnu_headers): Add thread-start.h.
	(l4_headers): Likewise.
	* headers.m4: Add l4/thread-start.h and l4/gnu/thread-start.h.

	* l4/gnu/space.h (L4_FPAGE_SPAN_MAX): New macro.
	(l4_fpage_span): New function.

2004-04-06  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h: Revert last change.  Local IPC must always include
	a send and a receive phase.

2004-04-05  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (l4_lwait_timeout, l4_lwait, l4_lreply): New
	functions.

	* l4/syscall.h (_L4_IPC_TIMEOUT, _L4_IPC_NO_PARTNER,
	_L4_IPC_CANCELED, _L4_IPC_MSG_OVERFLOW,
	_L4_IPC_XFER_TIMEOUT_INVOKER, _L4_IPC_XFER_TIMEOUT_PARTNER,
	_L4_IPC_ABORTED): New macros.
	* l4/gnu/syscall.h (L4_IPC_TIMEOUT, L4_IPC_NO_PARTNER,
	L4_IPC_CANCELED, L4_IPC_MSG_OVERFLOW, L4_IPC_XFER_TIMEOUT_INVOKER,
	L4_IPC_XFER_TIMEOUT_PARTNER, L4_IPC_ABORTED): New macros.

2004-04-02  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/space.h (L4_FPAGE_NO_ACCESS): Change L4_FPAGE_NO_ACCESS
	from _l4_no_access to _L4_no_access.

2004-04-01  Marcus Brinkmann  <marcus@gnu.org>

	* ia32/l4/bits/syscall.h (_L4_system_clock): Add "edi" to
	clobbered registers.

	* l4/space.h (_L4_unmap_fpage): Change return type to _L4_fpage_t.
	Return FPAGE.
	(_L4_flush): Likewise.
	* l4/compat/space.h (L4_UnmapFpage): Store the result of
	_L4_unmap_fpage in FPAGE.