@@ -28,7 +28,7 @@ SUBDIRS =  $(ARCH_SUBDIR)
 
 # Header files that must be provided by all interfaces.
 common_headers := ipc.h kip.h message.h misc.h schedule.h space.h	\
-	syscall.h thread.h types.h
+	syscall.h thread.h types.h sigma0.h
 # Interface-specific header files.
 gnu_headers := $(common_headers) math.h pagefault.h thread-start.h
 compat_headers := $(common_headers)
@@ -36,7 +36,7 @@ compat_headers := $(common_headers)
 # Main libl4 header files.
 l4_headers = features.h globals.h init.h ipc.h kip.h math.h message.h	\
 	misc.h pagefault.h schedule.h space.h stubs-init.h stubs.h	\
-	syscall.h thread.h thread-start.h types.h vregs.h
+	syscall.h thread.h thread-start.h types.h vregs.h sigma0.h
 
 include_HEADERS = l4.h
 nobase_include_HEADERS = $(addprefix l4/, $(l4_headers))	\
